WELD-2771 Revisit Weld examples, update deps, verify they work